--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "habitflow"
 version = "0.1.0"
 description = ""
-authors = ["oksanafedorova07 <kcenka4@gmail.com>"]
+authors = ["katja <gorbunovakatja530@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
