--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "habitflow"
+name = "habit"
 version = "0.1.0"
 description = ""
 authors = ["katja <gorbunovakatja530@gmail.com>"]
@@ -7,14 +7,35 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+dependencies = [
+    "signals (>=0.0.2,<0.0.3)",
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "django (>=5.2.7,<6.0.0)"
+]
 
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.3.0"
-mypy = "^1.16.1"
-black = "^25.1.0"
+mypy = "^1.18.2"
+black = "^25.9.0"
 isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.1.1"
+django = "^5.2.4"
+djangorestframework = "^3.16.0"
+djangorestframework-simplejwt = "^5.5.0"
+celery = "^5.5.3"
+redis = "^5.2.1"
+django-cors-headers = "^4.7.0"
+drf-yasg = "^1.21.10"
+requests = "^2.32.4"
+psycopg2 = "^2.9.10"
+pytest-html = "^4.1.1"
+pytest-django = "^4.11.1"
+pytest = "^8.4.1"
+coverage = "^7.9.1"
