--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django DRF Atomic Habits CI/CD Pipeline
 
 on: [ push, pull_request ]
 
@@ -12,145 +12,152 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
+      - name: Install Poetry
+        run: pip install poetry
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+        run: poetry install --no-root
       - name: Run Flake8
-        run: flake8 .
+        run: poetry run flake8 .
+
   test:
-    needs: lint
     runs-on: ubuntu-latest
+    needs: lint
     services:
       postgres:
-        image: postgres:17
+        image: postgres:16
         env:
-          POSTGRES_DB: courses
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: admin123
-        ports: [ '5432:5432' ]
+          POSTGRES_PASSWORD: 2222
+          POSTGRES_DB: drf_atomic_habits
+        ports:
+          - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
-
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
+      - name: Install Poetry
+        run: pip install poetry
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run migrations
+        run: poetry install --no-root
+      - name: Makemigrations
         env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          ENGINE: django.db.backends.postgresql_psycopg2
-          DB_NAME: courses
-          DB_USER: postgres
-          DB_PASSWORD: admin123
-          DB_HOST: localhost
-          DB_PORT: 5432
-          CELERY_RESULT_BACKEND: redis://localhost:6379/0
-          CELERY_BROKER_URL: redis://localhost:6379/0
-        run: python manage.py migrate
-
+          SECRET_KEY: ${{ secrets.SSH_KEY }}
+          DATABASE_NAME: drf_atomic_habits
+          DATABASE_USER: postgres
+          DATABASE_PASSWORD: 2222
+          DATABASE_HOST: localhost
+          DATABASE_PORT: 5432
+        run: poetry run python manage.py makemigrations
       - name: Run tests
         env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          ENGINE: django.db.backends.postgresql_psycopg2
-          DB_NAME: courses
-          DB_USER: postgres
-          DB_PASSWORD: admin123
-          DB_HOST: localhost
-          DB_PORT: 5432
-          CELERY_RESULT_BACKEND: redis://localhost:6379/0
-          CELERY_BROKER_URL: redis://localhost:6379/0
-        run: python manage.py test
+          SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          DATABASE_NAME: drf_atomic_habits
+          DATABASE_USER: postgres
+          DATABASE_PASSWORD: 2222
+          DATABASE_HOST: localhost
+          DATABASE_PORT: 5432
+        run: poetry run python manage.py test
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/feature/ci_cd'
-
+    if: github.ref == 'refs/heads/feature/ci-cd'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
-      - name: Install and Start Docker
+      - name: Add server to known_hosts
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          # Установка Docker если не установлен
-          if ! command -v docker &> /dev/null; then
-            echo "Installing Docker..."
-            curl -fsSL https://get.docker.com -o get-docker.sh
-            sudo sh get-docker.sh
-            sudo usermod -aG docker $USER
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
+      - name: Copy project files to server
+        run: |
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          DEPLOY_DIR="${{ secrets.DEPLOY_DIR }}"
+          if [ ! -d "\$DEPLOY_DIR/.git" ]; then
+            echo "Cloning repository into \$DEPLOY_DIR..."
+            git clone "https://github.com/IvanPro91/DRF_Atomic_Habits.git" "\$DEPLOY_DIR"
           fi
-          
-          # Запуск Docker daemon
-          sudo systemctl start docker
-          sudo systemctl enable docker
-          
-          # Даем время на запуск
-          sleep 10
-          
-          # Проверяем что Docker работает
-          docker --version
-          sudo systemctl status docker
+          cd "\$DEPLOY_DIR"
+          git fetch origin
+          git checkout "feature/ci-cd"
+          git reset --hard "origin/feature/ci-cd"
           EOF
 
-      - name: Set up Venv
+      - name: Install dependencies on server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          PROJECT_PATH="/home/${{ secrets.SSH_USER }}/habits_prpject"
-          mkdir -p "$PROJECT_PATH"
-          cd "$PROJECT_PATH"
-          
-          if [ ! -d ".venv" ]; then
-            python3 -m venv venv
-          fi
-          sudo apt install python3 python3-pip python3-venv -y
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          cd "${{ secrets.DEPLOY_DIR }}"
+          curl -sSL https://install.python-poetry.org | python3 -
+          ~/.local/bin/poetry install --no-root
           EOF
 
-      - name: Deploy docker to server
+      - name: Setup and configure PostgreSQL
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          PROJECT_PATH="/home/${{ secrets.SSH_USER }}/habits_prpject"
-          mkdir -p "$PROJECT_PATH"
-          cd "$PROJECT_PATH"
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          sudo apt update
           
-          if [ -d ".git" ]; then
-            echo "Updating existing repository..."
-            git fetch origin
-            git checkout "feature/ci_cd"
-            git pull origin "feature/ci_cd"
+          sudo apt install -y postgresql postgresql-contrib
+          
+          sudo systemctl start postgresql
+          sudo systemctl enable postgresql
+          
+          sudo systemctl status postgresql
+          
+          if ! systemctl is-active --quiet postgresql; then
+            echo "PostgreSQL is not running. Starting..."
+            sudo systemctl start postgresql
           else
-            echo "Cloning repository..."
-            git clone "https://github.com/yuriy0770/habits_prpject.git" .
-            git checkout "feature/ci_cd"
+            echo "PostgreSQL is already running."
           fi
-          
-          sudo docker compose down -v || true
-          sudo docker compose up -d --build
+          sudo systemctl enable postgresql
+
+          sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} WITH PASSWORD '${{ secrets.DB_PASSWORD }}';"
+
+          sudo -u postgres psql -tc "SELECT 1 FROM pg_database WHERE datname='${{ secrets.DB_NAME }}';" | grep -q 1 || \
+          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_NAME }} OWNER ${{ secrets.DB_USER }};"
+
+          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_NAME }} TO ${{ secrets.DB_USER }};"
+          EOF
+
+      - name: Create .env file on server
+        run: |
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          cd "${{ secrets.DEPLOY_DIR }}"
+          cat > .env <<EOL
+          SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+          DATABASE_NAME=${{ secrets.DB_NAME }}
+          DATABASE_USER=${{ secrets.DB_USER }}
+          DATABASE_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DATABASE_HOST=localhost
+          DATABASE_PORT=5432
+          EOL
+          EOF
+
+      - name: Apply migrations
+        run: |
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          cd "${{ secrets.DEPLOY_DIR }}"
+          PGPASSWORD='${{ secrets.DB_PASSWORD }}' psql -h localhost -U ${{ secrets.DB_USER }} -d ${{ secrets.DB_NAME }} -c "SELECT 1;" || exit 1
+          ~/.local/bin/poetry run python manage.py migrate --no-input
+          EOF
+
+      - name: Start Django application
+        run: |
+          # Старт проекта
+          ssh -T -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << "EOF"
+          cd "${{ secrets.DEPLOY_DIR }}"
+          pkill -f "gunicorn config.wsgi:application" || true
+          nohup ~/.local/bin/poetry run gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 2 > app.log 2>&1 &
+          echo "Application started in background"
           EOF
