--- a/.env_template
+++ b/.env_template
@@ -1,9 +1,9 @@
-SECRET_KEY=***********
+SECRET_KEY=
 DEBUG=True
 
-TELEGRAM_BOT_TOKEN=*********
+TELEGRAM_BOT_TOKEN=
 
-DATABASE_NAME=*********
+DATABASE_NAME=
 DATABASE_USER=postgres
 DATABASE_PASSWORD=admin123
 DATABASE_HOST=localhost
