--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,7 +58,7 @@ jobs:
 #        run: poetry run python manage.py makemigrations
       - name: Run tests
         env:
-          SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DATABASE_NAME: drf_atomic_habits
           DATABASE_USER: postgres
           DATABASE_PASSWORD: 2222
